<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TechnicalProblems">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="133dp"
            android:background="#0652DD"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_can_we_help"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <LinearLayout
                    android:id="@+id/technicals_profiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/customer_support_image"
                        android:src="@drawable/customer_service_one" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/customer_support_image"
                        android:src="@drawable/customer_service_two"
                        />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/customer_support_image"
                        android:src="@drawable/customer_service_three"
                        />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/customer_support_image"
                        android:src="@drawable/customer_service_four"
                        />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/customer_support_image"
                        android:src="@drawable/customer_service_five"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:layout_below="@+id/technicals_profiles"
                    >

                    <Button
                        android:id="@+id/moveto_knowledge_base"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:text="@string/knowledgebase"
                        android:textAllCaps="false"
                        />

                    <Button
                        android:id="@+id/moveto_open_ticket"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:text="@string/open_a_ticket"
                        android:textAllCaps="false"
                        />

                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />


        <TextView
            android:id="@+id/technical_problem_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/technical_problem"
            android:textColor="@color/telex_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/technical_problem_header">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_txt"
                    android:textSize="16sp"
                    android:textColor="@color/telex_black"
                    android:layout_marginBottom="10dp"
                    />


                <LinearLayout
                    android:id="@+id/user_full_name_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp">

                    <EditText
                        android:id="@+id/user_first_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dp"
                        android:hint="@string/first_name"
                        android:background="@drawable/edit_border"
                        android:layout_marginEnd="15dp"
                        android:maxLines="1"/>

                    <EditText
                        android:id="@+id/user_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_border"
                        android:hint="@string/last_name"
                        android:maxLines="1"/>


                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:textColor="@color/telex_black"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_border"
                    android:layout_marginBottom="25dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/problem_description_txt"
                    android:textSize="16sp"
                    android:textColor="@color/telex_black"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/problem_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_border"
                    android:layout_marginBottom="25dp"
                    android:inputType="text"
                    android:maxLines="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Give us the details"
                    android:textSize="16sp"
                    android:textColor="@color/telex_black"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/details_of_problem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:background="@drawable/edit_border"
                    android:hint="Please Describe Issue"
                    android:gravity="top"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:layout_marginBottom="25dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_urgency"
                    android:textSize="16sp"
                    android:textColor="@color/telex_black"
                    android:layout_marginBottom="10dp"
                    />


                <Spinner
                    android:id="@+id/urgency_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/knowledgebase"
                    android:layout_marginBottom="25dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Attach a file, screenshot or document"
                    android:textSize="16sp"
                    android:textColor="@color/telex_black"
                    android:layout_marginBottom="10dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="25dp">


                    <Button
                        android:id="@+id/choose_file"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_file"
                        android:textAllCaps="false"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp" />

                    <TextView
                        android:id="@+id/choose_file_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_file_choosen"
                        android:textSize="14sp"
                        android:textColor="@color/telex_black"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>


                <Button
                    android:id="@+id/send_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Send Message"
                    android:background="#0652DD"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>



